--- a/src/css/assignPage/assign.css
+++ b/src/css/assignPage/assign.css
@@ -1,26 +1,48 @@
 body {
-  font-family: Arial, sans-serif;
-  background-color: rgb(246, 222, 192); 
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   margin: 0;
-  padding: 20px;
+  padding: 0;
+  background-image: url('backgroundImage.jpg');
+  background-repeat: no-repeat; /* Prevents the image from repeating */
+  background-size: cover;      /* Scales the image to cover the entire element */
+  background-position: center center; /* Centers the image */
+  background-attachment: fixed;
+  min-height: 100vh;
 }
 
-h2, h3 {
-  margin-bottom: 15px;
+ h3 {
+  background-color: rgb(242, 139, 48 );
+  margin-bottom: 0 auto;
+  padding: 20px;
+  display: block;
+  width: 100%;
+  color: white;
 }
 
 /* Form container */
-form {
+.truckForm{
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
   max-width: 500px;
-  margin: 0 auto;
+  margin: 20px auto;
   background: #fff8f0;
   padding: 20px;
   border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.truckListContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  margin-top: -20px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
 
@@ -138,9 +160,6 @@ button:hover {
 
 /*Phone version*/
 @media (max-width: 480px) {
-  body {
-    padding: 10px;
-  }
   form {
     padding: 15px;
   }
@@ -148,7 +167,7 @@ button:hover {
     font-size: 0.85rem;
     padding: 8px;
   }
-  h2, h3 {
+  h3 {
     font-size: 1.2rem;
   }
   .button-group {
